@@ -8,8 +8,9 @@ OpenDNSSEC 1.4.2
   number of zones as a parameter
 
 Bugfixes:
-* OPENDNSSEC-438: 'ods-ksmutil key generate' creates too many keys for 
-  <SharedKeys/> policies when KSK and ZSK use same algorithm and length
+* OPENDNSSEC-438: 'ods-ksmutil key generate' and the enforcer can create
+  too many keys for <SharedKeys/> policies when KSK and ZSK use same 
+  algorithm and length
 * OPENDNSSEC_440: * OPENDNSSEC-438: 'ods-ksmutil key generate' creates too 
   many keys for some cases
 * SUPPORT-66: Signer Engine: Fix file descriptor leak in case of TCP write
